[gd_scene load_steps=14 format=3 uid="uid://digqu37hn5i5j"]

[ext_resource type="PackedScene" path="res://scenes/in_game_manager.tscn" id="1_ilnlu"]
[ext_resource type="Script" path="res://scenes/Level.gd" id="1_oogtp"]
[ext_resource type="PackedScene" uid="uid://3cc7usihdqph" path="res://scenes/hud/canvas_layer_hud.tscn" id="1_t2o0t"]
[ext_resource type="PackedScene" uid="uid://b5xxrn8guepbq" path="res://scenes/bosses/susan_boss.tscn" id="1_x4wo3"]
[ext_resource type="AudioStream" uid="uid://dl7g1rp6w02m8" path="res://audio/sfx/UI/UI_menu_start_Game.ogg" id="2_iiafk"]
[ext_resource type="Texture2D" uid="uid://fjbu3dgsvhaf" path="res://graphics/arena/Decors Boss 1080px.png" id="2_thxka"]
[ext_resource type="PackedScene" uid="uid://yho78jqdnxmq" path="res://scenes/player/player.tscn" id="2_tqnur"]
[ext_resource type="AudioStream" uid="uid://cqg0mqcprl45e" path="res://audio/bgm/bgm_boss_intro_2.987.ogg" id="3_fe5x7"]
[ext_resource type="PackedScene" uid="uid://dx4ur84t2f5vj" path="res://scenes/tools/ring_wall_generator.tscn" id="3_mqfqo"]
[ext_resource type="PackedScene" uid="uid://6psb0ebpd4qa" path="res://utils/audio/SFXManager.tscn" id="4_8ii4x"]
[ext_resource type="PackedScene" uid="uid://d4fpogs8pfntc" path="res://scenes/worlds/objects/wall_segment.tscn" id="4_tm174"]
[ext_resource type="Script" path="res://utils/FXManager.gd" id="7_y0lpd"]
[ext_resource type="Texture2D" uid="uid://bwxov3klnu10q" path="res://graphics/UIX/Death Screen/Death.png" id="12_l8vl6"]

[node name="BossStage1LevelTest" type="Node2D" groups=["level"]]
script = ExtResource("1_oogtp")
start_sfx = ExtResource("2_iiafk")

[node name="Background" type="Node2D" parent="."]

[node name="Map" type="Sprite2D" parent="Background"]
texture = ExtResource("2_thxka")

[node name="InGameManager" parent="." instance=ExtResource("1_ilnlu")]
bgm = ExtResource("3_fe5x7")

[node name="FXManager" type="Node" parent="." groups=["fx_manager"]]
script = ExtResource("7_y0lpd")

[node name="SFXManager" parent="." instance=ExtResource("4_8ii4x")]

[node name="CanvasLayer HUD" parent="." instance=ExtResource("1_t2o0t")]

[node name="SusanBoss" parent="." instance=ExtResource("1_x4wo3")]

[node name="Player" parent="." instance=ExtResource("2_tqnur")]
position = Vector2(-50, 242)

[node name="RingWallGenerator" parent="." instance=ExtResource("3_mqfqo")]
wall_segment_scene = ExtResource("4_tm174")
wall_radius = 520.0
angle_step = 0.0872665

[node name="Camera2D" type="Camera2D" parent="."]
position_smoothing_enabled = true
position_smoothing_speed = 15.0

[node name="ProjectilesParent" type="Node2D" parent="."]

[node name="AOEsParent" type="Node2D" parent="."]

[node name="FXsParent" type="Node2D" parent="."]

[node name="DeathScreen" type="Sprite2D" parent="."]
modulate = Color(1, 1, 1, 0)
texture = ExtResource("12_l8vl6")

[node name="Timers" type="Node" parent="."]

[node name="BackToMenuTimer" type="Timer" parent="Timers"]
wait_time = 5.0
one_shot = true

[connection signal="timeout" from="Timers/BackToMenuTimer" to="." method="_on_back_to_menu_timer_timeout"]
